# iot-smartcard-project

./: .gitignore  README.md  apdu_commands.scriptor  build.sh  delete_prev_applet.gpshell  install_on_card.sh  list_applets.gpshell  upload_applet.gpshell
.github/workflows/: rust.yml
helloWorld/: HelloWorld.java
helloWorld/javacard/: helloWorld.cap  helloWorld.exp
iot-smartcard-client-rs/: Cargo.toml
iot-smartcard-client-rs/src/: lib.rs  main.rs  rsa_public_key.rs  smart_card.rs  smart_card_commands.rs
iot-smartcard-client-rs/src/messages/: aAbBcC;:=0987654321.txt  aAbBcC_0987654321.txt  yves_roudier.txt
iot-smartcard-client-rs/src/results/: aAbBcC;:=0987654321_signature_valid.txt  aAbBcC_0987654321_signature_valid.txt  hello_signature_valid.txt  yves_roudier_signature_valid.txt
lib/: README.md
smartCardProject/: SmartCardProject.java
